# aoc_fruit_detector

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/repos/: external.repos
.devcontainer/scripts/: install_external_ros_packages.sh  post-create.sh
.github/workflows/: dev-container.yml  docker-build-image.yml
config/: non_ros_params.yaml  ros_params.yaml
config/RViz/: initial.rviz
launch/: fruit_tracking.launch.py
nuclio_function/: CVAT_INTEGRATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  cvat_converter.py  cvat_model_config.json  deploy.sh  docker-compose.yml  function.yaml  health_check.py  main.py  requirements.txt  ros2_bridge.py  test_function.py  validate.py
scripts/: fruit_detection.py  fruit_tracking.py
